[project]
name = "sentraauthx"
version = "0.1.0"
description = ""
authors = [
    {name = "styse",email = "styse011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-rest-knox (>=5.0.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "sentraauthx", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
